--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <body>
         <h1>It's Alive!</h1>
         <p class = "test"></p>
-    
+    	Test
         <script src = "script.js"></script>
     
     </body>
